# codecrafters-simple-shell

./: CMakeLists.txt  README.md
src/: cd.c  compareAndExecute.c  echo.c  exit.c  hashing.c  headers.h  main.c  pwd.c  registercommands.c  type.c
